# parity-wasm

./: Cargo.toml  LICENSE-MIT  README.md
examples/: bench-decoder.rs  build.rs  data.rs  exports.rs  info.rs  inject.rs  roundtrip.rs  show.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserialize.rs
src/: io.rs
src/builder/: module.rs
src/elements/: export_entry.rs  func.rs  global_entry.rs  import_entry.rs  index_map.rs  mod.rs  module.rs  name_section.rs  ops.rs  primitives.rs  reloc_section.rs  section.rs  segment.rs  types.rs
testsuite/: Cargo.toml
testsuite/src/: run.rs
