[package]
name = "wasmut-wasm-testsuite"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
publish = false
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lwagner94/wasmut-wasm"
homepage = "https://github.com/lwagner94/wasmut-wasm"
description = "wasmut-wasm testsuite"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
wast = "38"
test-generator = "0.3"

[dependencies.wasmut-wasm]
path = ".."
features = [
	"atomics",
	"simd",
	"sign_ext",
	"bulk",
	"multi_value",
]
